--- a/app/src/main/res/drawable/shape_green_round_rect.xml
+++ b/app/src/main/res/drawable/shape_green_round_rect.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="@color/primary_color" />
 
-    <corners android:radius="50dp" />
+    <corners android:radius="@dimen/_22sdp" />
 
 </shape>
