--- a/app/src/main/res/drawable/shape_green_round_rect_core.xml
+++ b/app/src/main/res/drawable/shape_green_round_rect_core.xml
@@ -5,7 +5,7 @@
         <shape>
             <stroke android:color="@color/primary_color"
                 android:width="2dp"/>
-            <corners android:radius="50dp"/>
+            <corners android:radius="@dimen/_22sdp"/>
         </shape>
     </item>
 
