--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -15,10 +15,10 @@
 
     <ImageView
         android:id="@+id/createAccountCloseIV"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="@dimen/_13sdp"
+        android:layout_height="@dimen/_13sdp"
+        android:layout_marginTop="@dimen/_45sdp"
+        android:layout_marginBottom="@dimen/_14sdp"
         android:src="@drawable/ic_x" />
 
     <ScrollView
@@ -37,14 +37,14 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Create Account"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp" />
+                android:textSize="@dimen/_16ssp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/firstNameTIL"
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:hint="First Name"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -58,12 +58,13 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="First Name"
                     android:inputType="text"
-                    android:padding="14dp"
+                    android:padding="@dimen/_14sdp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:imeOptions="actionNext"
+                    android:maxLength="30"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -72,7 +73,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:hint="Last Name"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -87,25 +88,28 @@
                     android:hint="Last Name"
                     android:inputType="text"
                     android:maxLength="30"
-                    android:padding="14dp"
+                    android:padding="@dimen/_14sdp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:imeOptions="actionNext" />
+                    android:imeOptions="actionNext"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emailTIL"
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:hint="Email"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/primary_green"
-                app:hintTextColor="@color/primary_green">
+                app:hintTextColor="@color/primary_green"
+                app:errorTextColor="@color/error_red">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/emailET"
@@ -114,9 +118,9 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
-                    android:padding="14dp"
+                    android:padding="@dimen/_14sdp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColorHint="@color/light_gray"
                     android:imeOptions="actionNext"
                     android:textCursorDrawable="@drawable/cursor_color"/>
@@ -128,24 +132,24 @@
                 android:id="@+id/emailErrorLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="7dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_5sdp">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
                     android:src="@drawable/ic_erro" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="User alread exists. Try a new email or log in."
+                    android:text="User already exists. Try a new email or log in."
                     android:textColor="@color/error_red"
-                    android:textSize="@dimen/text_size_10sp"
+                    android:textSize="@dimen/_10ssp"
                     />
             </LinearLayout>
 
@@ -153,12 +157,37 @@
                 android:id="@+id/phoneNumberET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp" />
+                android:layout_marginTop="@dimen/_14sdp" />
+
+            <LinearLayout
+                android:id="@+id/phoneErrorLL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_5sdp">
+
+                <ImageView
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
+                    android:src="@drawable/ic_erro" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="User already exists. Try a new phone number or log in."
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_10ssp"
+                    />
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="14dp">
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginTop="@dimen/_14sdp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/TextInputLayout.OutlinedBox"
@@ -179,9 +208,9 @@
                         android:hint="8-12 Characters"
                         android:inputType="textPassword"
                         android:maxLength="12"
-                        android:padding="14dp"
+                        android:padding="@dimen/_14sdp"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/text_size_12sp"
+                        android:textSize="@dimen/_12ssp"
                         android:textColorHint="@color/light_gray"
                         android:imeOptions="actionNext"
                         android:textCursorDrawable="@drawable/cursor_color"/>
@@ -194,7 +223,7 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     >
 
                     <View
@@ -232,19 +261,21 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
                 android:textColor="@color/dark_grey"
-                android:textSize="@dimen/text_size_10sp" />
+                android:textSize="@dimen/_10ssp"
+                android:layout_marginTop="@dimen/_10sdp"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:hint="Confirm Password"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/primary_green"
                 app:hintTextColor="@color/primary_green"
-                app:passwordToggleEnabled="true">
+                >
+<!--                app:passwordToggleEnabled="true"-->
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/confirmPasswordET"
@@ -255,9 +286,9 @@
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLength="12"
-                    android:padding="14dp"
+                    android:padding="@dimen/_14sdp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"/>
 
@@ -268,7 +299,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -277,7 +308,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="By clicking next, you agree to "
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/text_size_11sp" />
+                    android:textSize="@dimen/_11ssp" />
 
                 <TextView
                     android:id="@+id/tosTV"
@@ -286,7 +317,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="Terms of Service "
                     android:textColor="@color/primary_color"
-                    android:textSize="@dimen/text_size_11sp" />
+                    android:textSize="@dimen/_11ssp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -294,7 +325,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="&amp; "
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/text_size_11sp" />
+                    android:textSize="@dimen/_11ssp" />
 
 
             </LinearLayout>
@@ -306,17 +337,17 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="Privacy Policy"
                 android:textColor="@color/primary_color"
-                android:textSize="@dimen/text_size_11sp" />
+                android:textSize="@dimen/_11ssp" />
 
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/nextCV"
                 android:layout_width="match_parent"
-                android:layout_height="43dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="@dimen/_22sdp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -324,7 +355,7 @@
                     android:gravity="center"
                     android:text="Next"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/opensans_bold" />
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
