--- a/app/src/main/res/layout/outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/outline_box_unfocused"
         android:gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,11 +18,9 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_25sdp"
             android:gravity="center"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp">
+            android:layout_marginStart="@dimen/_15sdp">
 
             <ImageView
                 android:layout_width="20dp"
@@ -34,7 +32,8 @@
                 android:text="+1"
                 android:textColor="@color/light_gray"
                 android:layout_marginStart="5dp"
-                android:fontFamily="@font/opensans_regular"/>
+                android:fontFamily="@font/opensans_regular"
+                android:textSize="@dimen/_12ssp"/>
             <View
                 android:layout_width="1.5dp"
                 android:layout_height="match_parent"
@@ -54,7 +53,7 @@
             android:background="@android:color/transparent"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
-            android:textSize="@dimen/text_size_12sp"
+            android:textSize="@dimen/_12ssp"
             app:mask="(___) ___-____"
             android:singleLine="true"
             android:maxLines="1"
