--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -78,4 +78,8 @@
         <item name="colorAccent">@color/primary_green</item>
     </style>
 
+    <style name="InputError" parent="TextAppearance.Design.Error"/>
+    <style name="InputError.Error">
+        <item name="android:textColor">@color/error_red</item>
+    </style>
 </resources>
