--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="primary_black">#151515</color>
     <color name="error_red">#E72222</color>
     <color name="dark_grey">#767676</color>
+    <color name="viewcolor">#e8e8e8</color>
 
 </resources>
