--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -70,10 +70,9 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentTop="true"
                                     android:layout_marginTop="5dp"
-                                    android:weightSum="2"
                                     android:orientation="vertical"
                                     android:paddingLeft="32dp"
-                                    >
+                                    android:weightSum="2">
 
                                     <TextView
                                         android:id="@+id/customerNameTV"
@@ -210,6 +209,7 @@
                 android:layout_marginTop="14dp"
                 android:layout_marginEnd="14dp"
                 android:background="@color/white"
+                android:visibility="gone"
                 app:cardCornerRadius="15dp">
 
                 <LinearLayout
