Forgot PIN flow Coyni PIN validate  in Login flow

--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -185,6 +185,7 @@
                                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                                     <ImageView
+                                        android:id="@+id/imgQRCode"
                                         android:layout_width="25dp"
                                         android:layout_height="25dp"
                                         android:src="@drawable/ic_qr_code"
