--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -99,8 +99,7 @@
         android:orientation="vertical"
         android:id="@+id/touchIDRL"
         android:visibility="gone"
-        android:padding="20dp"
-        >
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
