Account Limits Screen

--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     android:background="@color/white"
     tools:context=".view.IdentityVerificationActivity"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    >
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" >
 
     <LinearLayout
         android:id="@+id/topbarll"
